[gd_scene load_steps=2 format=3 uid="uid://bc3cyf7xxj2kf"]

[ext_resource type="Script" path="res://UI/TargetSelectionMenu.gd" id="1_target_menu"]

[node name="TargetSelectionMenu" type="Panel"]
z_index = 100
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_target_menu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "选择目标"
horizontal_alignment = 1

[node name="SkillInfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "角色 使用: 技能"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TargetListContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="TargetInfoPanel" type="Panel" parent="VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 120)

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/TargetInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="TargetNameLabel" type="Label" parent="VBoxContainer/TargetInfoPanel/VBoxContainer"]
layout_mode = 2
text = "目标名称"
horizontal_alignment = 1

[node name="TargetHPLabel" type="Label" parent="VBoxContainer/TargetInfoPanel/VBoxContainer"]
layout_mode = 2
text = "生命值: 0/0"

[node name="TargetMPLabel" type="Label" parent="VBoxContainer/TargetInfoPanel/VBoxContainer"]
layout_mode = 2
text = "魔法值: 0/0"

[node name="TargetStatusLabel" type="Label" parent="VBoxContainer/TargetInfoPanel/VBoxContainer"]
layout_mode = 2
text = "状态: 未知"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "取消" 